simannfit parmin parmax changeable while running

--- a/doc/cfparsymmetrytable.tex
+++ b/doc/cfparsymmetrytable.tex
@@ -16,8 +16,14 @@ nonzero, one of these $B_l^m$ with $m>0$
 However, the appropriate orientation of 
 the coordinate system in these cases is not known {\em a priori}. It requires
 the knowledge of the CEF parameters.
-Note, that for cubic symmetry additionally B$_4^4$=5 B$_4^0$,
-B$_6^4$=-21 B$_6^0$. For the icosahedral case (not compatible with
+Note, that for cubic symmetry additionally 
+$B_4^4=5 B_4^0$, $B_6^4=-21 B_6^0$ (for $xyz||abc$), 
+$L_4^4=5/\sqrt{70} L_4^0$, $L_6^4=-\sqrt{7/2} L_6^0$ (for $xyz||abc$), 
+$B_4^{3_{111}}=-20\sqrt{2} B_4^{0_{111}}$, $B_6^{3_{111}}=35\sqrt{2}/4 B_6^{0_{111}}$ $B_6^{6_{111}}=77/8 B_6^{0_{111}}$ for $z||[111]$ 
+$L_4^{3_{111}}=-\sqrt{10/7} L_4^{0_{111}}$, $L_6^{3_{111}}=\frac{1}{8}\sqrt{70/3} L_6^{0_{111}}$ 
+$L_6^{6_{111}}=\frac{1}{8}\sqrt{77/3} L_6^{0_{111}}$ for $z||[111]$ 
+       with $B_4^{0_{111}}=(-2/3)B_4^0$, $B_6^{0_{111}}=16/9B_6^0$. 
+For the icosahedral case (not compatible with
 translational symmetry) B$_6^5$=-42B$_6^0$~\cite{walter87-2504}.}
 \label{tab:symmetry}
 \begin{tabular}{lllllllllllllllll}
