--- a/doc/fitting.tex
+++ b/doc/fitting.tex
@@ -248,19 +248,62 @@ by the command (in the example you should go to the directory {\prg /mcphas/exam
 The ''10'' in the command means that the initial statistical
 ''temperature'' of the algorithm
 is set to 10.  
-\item option -l 0.2 ... sets limit - program will end if $sta<0.2$
-\item Option -t sets time limit until program end (in seconds).
-\item Option -s gives maximal number of iteration steps to be done.
-\item Option -n allows to store every 200 steps the parametersets in a table in  {\prg results/simannfit.0}.
-\item Option -p 30 probes solution, i.e. runs simannfit , stepwidths are not decreased during
-                   fitting, if parameter set $parn$ is found with $sta<=sta of initial parameters$
-                   then all sets par in {\prg results/simannfit.1} are scanned and
-                   distance $d=\sum_i^N (par_i-parn_i)^2/stepwidth_i^2$ is calculated. If 
-                   $d>N $(=number of parameters) for
-                   for all sets par, then $parn$ is appended to the list in {\prg results/simannfit.1}
-                   up to 20 parameters are appended to this list, after that the program stops
-                   - in this way a series of equally good solutions can be explored.
-\item option -w 1.4     before starting simannfit, multiply all stepwidths by factor 1.4
+\end{itemize}
+
+ OPTIONS for ...
+\begin{itemize}
+\item STEPWIDTHS
+\begin{description}
+\item[-w 1.4]  before starting simannfit, multiply all stepwidths by factor 1.4 
+\item[-r 0.2] before starting simannfit, set all stepwidths to parameter 
+            range=max-min times 0.2, 
+\item[-f 0.2] before starting simannfit, set all stepwidths to parameter value 
+            times 0.2, however never smaller than parameterrange/1000 
+\item[-p 20] probing parameter space: stepwidths are not decreased during
+	    fitting, new set of pars $parn$ are generated and for all sets par in 
+	    {\prg results/simannfit.1} and {\prg results/simannfit.0} are scanned and
+	    distance $d=\sum_i^N (par_i-parn_i)^2/stepwidth_i^2$ is calculated. If
+$d>N $(=number of parameters)
+	    for all sets par, then $sta$ is calculated. if  $sta<=sta$ of initial parameters
+	    then $parn$ is appended to the list in {\prg results/simannfit.1}
+	    up to 20 parameters are appended to this list, after that the program stops.
+	    the program also stops if step ratio reaches a value $> 11$ (step ratio 
+	    is a factor applied to all (maximum) stepwidths before generating a step in the random walk
+	    It is decreased each successful step in the random walk and increased to find an
+	    acceptable step (distance criteria) to try
+	    thus, to probe a large region of parameter space do not set statistical
+	    temperature too low to enable efficient stepping. On the other hand to
+	    probe only the vicinity of a optimum in every direction of parameter
+	    space a small statistical inital temperature is necessary
+	    - in this way a series of equally good solutions can be explored.
+\end{description}
+\item  PARALLEL PROCESSING
+\begin{description}\item[-s0 filename] instead of results/simannfit.0 use filename to store/read 
+\item[-s1 filename] instead of results/simannfit.1 use filename to store/read 
+\item[-i 23] for storing in results/simannfit.* use index .23 instead of .0 as suffix 
+\end{description}
+\item LOGGING 
+\begin{description}
+\item[-n 50]allows to store every 50 steps the parametersets in a table in  {\prg results/simannfit.0}
+ (appending existing file).
+\item[-jpglog 3.5e-1 file.jpg] if sta is less then 3.5e-1, then the image file.jpg 
+            (which should be created by calcsta) is copied to results/parsetnr.jpg
+            a html tag is added to results/simannfit.0 or results/simannfit.1 if 
+	    stored
+\item[-log 1.3 batchfile.bat] if sta is less then 3.5e-1, then execute the file 
+             batchfile, with sta as argument, which can be adressed in the batch
+	     file with \$1 (linux) or  \%1 (windows)
+\item[-h]       Histograms are store in results/par*.hst for review of the variation 
+             of parameters during the run of simannfit. 
+\item[-d ]      store percentage of different contributions to sta in file results/simannfit.dst 
+\end{description}
+\item TERMINATION 
+\begin{description}
+\item[-l 0.2] sets limit - program will end if $sta<0.2$
+\item[-t 100] sets time limit until program end to 100 seconds
+\item[-s 132] gives maximal number of iteration steps 132 to be done
+\item[-c] continue at end of program - do not ask for pressing enter 
+\end{description}
 \end{itemize}
 Note that the user written program {\prg calcsta} has to be in the
 directory where {\prg simannfit\index{simannfit}} is started from.
