--- a/doc/phonon.tex
+++ b/doc/phonon.tex
@@ -739,7 +739,7 @@ in a Taylor expansion for small strain:
 
 \begin{eqnarray}\label{jjtaylor}
 {\mathcal J}_{\alpha\beta}(\mbf R=(1+\bar a)\mbf R_{ij})&=&{\mathcal J}_{\alpha\beta}(\mbf R_{ij})
-+ \frac{\partial {\mathcal J}_{\alpha\beta}}{\partial R^{\alpha}} \frac{\partial (\bar a\mbf R_{ij})^{\alpha}}{\partial \epsilon_{\beta}} \epsilon_{\beta} + \dots \nonumber \\
++ \frac{\partial {\mathcal J}_{\alpha\beta}}{\partial R^{\alpha'}} \frac{\partial (\bar a\mbf R_{ij})^{\alpha'}}{\partial \epsilon_{\beta'}} \epsilon_{\beta'} + \dots \nonumber \\
 &=& {\mathcal J}_{\alpha\beta}(\mbf R_{ij})+ 
 \sum_{\alpha'\gamma=1,2,3,\beta'=1,..,6}
 \frac{\partial {\mathcal J}_{\alpha\beta}}{\partial R^{\alpha'}}
