--- a/doc/cfield.tex
+++ b/doc/cfield.tex
@@ -149,7 +149,7 @@ transition (in barn/sr) at a given temperature according to the formula
 \begin{equation}
 \sigma(i\rightarrow k)=\left(\frac{\hbar \gamma e^2}{mc^2}\right)^2
 \frac{exp(-E_i/k_BT)}{\sum_j exp(-E_j/k_BT)} \frac{2}{3}\sum_{\alpha=x,y,z}
-|\langle i|J_{\alpha}|k\rangle|^2
+|\langle i|J_{\alpha}-\langle J_{\alpha} \rangle |k\rangle|^2
 \end{equation}
 
 Note: in this calculation energy and Q dependence
